Fix build.gradle issues